handling exceptions and add java doc